<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@android:color/white">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/gray"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/label_dados_usuario"
            android:textColor="@color/gray_black"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/sublabel_dados_usuario"
            android:textColor="@color/gray_dark"
            android:textStyle="italic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/edittext_dados_nome"
            android:ems="10"
            android:id="@+id/editNome" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/edittext_dados_telefone"
            android:inputType="phone"
            android:id="@+id/editTelefone" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/edittext_dados_email"
            android:ems="10"
            android:id="@+id/editEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/edittext_dados_email_conf"
            android:ems="10"
            android:id="@+id/editConfirmaEmail" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/edittext_dados_senha"
            android:ems="10"
            android:id="@+id/editSenha" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/edittext_dados_senha_conf"
            android:ems="10"
            android:id="@+id/editConfirmaSenha" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="Selecione o bairro de residência abaixo: "
            android:textColor="@color/gray_black"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_weight="0.6"
            android:id="@+id/editBairro" />

</LinearLayout>
