
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="mobile.br.com.reclameonibus.fragment.DialogLoginFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/dialog_explain_text"
            android:textColor="@color/gray_black"
            android:id="@+id/textView5"
            android:gravity="center"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dialog_nao_cadastrado"
            android:id="@+id/textView7"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/button_signin"
            android:id="@+id/btCadastro"
            style="@style/AppTheme.Button"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/dialog_cadastrato"
            android:id="@+id/textView8"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/editEmail"
            android:hint="@string/edittext_dados_email"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/editSenha"
            android:hint="@string/edittext_dados_senha"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/textEsqueceuSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/red"
            android:clickable="true"
            android:text="@string/text_forgot_pass"/>

        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/button_login"
            android:id="@+id/btLogin"
            style="@style/AppTheme.Button"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</LinearLayout>
