<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="2dp"
    android:orientation="horizontal"
    android:background="@color/gray_dark_soft"
    tools:context="mobile.br.com.reclameonibus.fragment.BottomBarFragment">

    <LinearLayout
        android:id="@+id/menu_item_01"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:padding="5dp"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/menu_button_01"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/icone_anuncios_off"
            android:clickable="false"/>
        <TextView
            android:id="@+id/menu_text_01"
            android:text="@string/title_section1"
            android:textSize="12sp"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_02"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:padding="5dp"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/menu_button_02"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:clickable="false"
            android:src="@drawable/icone_perfil_off"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/menu_text_02"
            android:text="@string/title_section2"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_03"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:padding="5dp"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/menu_button_03"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:clickable="false"
            android:src="@drawable/icone_ajustes_off"
            android:background="@android:color/transparent"/>
        <TextView
            android:id="@+id/menu_text_03"
            android:text="@string/title_section3"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_04"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray"
        android:padding="5dp"
        android:gravity="center"
        android:layout_weight="1">
        <ImageButton
            android:id="@+id/menu_button_04"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:scaleType="fitCenter"
            android:padding="10dp"
            android:clickable="false"
            android:background="@android:color/transparent"
            android:src="@drawable/icone_sobre_off"/>
        <TextView
            android:id="@+id/menu_text_04"
            android:text="@string/title_section4"
            android:clickable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
